# RTMPVideoStreamer

./: .gitignore  CMakeLists.txt  Config.cpp  Config.h  README.md  ReStreamer.cpp  ReStreamer.h  StreamerMain.cpp  StreamerMain.h  Types.h  build_package.cmd  build_youtube_package.cmd  live-streamer.conf.sample  main.cpp  vk-streamer.conf.sample
.github/workflows/: windows-build.yaml
gui/: GuiMain.cpp  GuiMain.h  NotificationProxy.cpp  NotificationProxy.h  StreamerEditDialog.cpp  StreamerEditDialog.h  StreamerEditDialog.ui  Theme.cpp  Theme.h  YouTubeLiveStreamer.rc  app.rc  main.qrc
installer/: AppxManifest.xml  AppxManifest.xml.template  MakeAppX.cmake  YouTube-Live-Streamer-AppxManifest.xml.template
snap/: snapcraft.yaml
www/: CMakeLists.txt
